--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "react-native": "0.64.1",
     "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-modal": "^11.10.0",
     "react-native-pell-rich-editor": "^1.7.0",
     "react-native-reanimated": "^2.1.0",
+    "react-native-render-html": "^5.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-splash-screen": "^3.2.0",
